Mi nombre agregado

--- a/index.html
+++ b/index.html
@@ -183,6 +183,19 @@
                 <td>Alemania</td>
                 <td>Amarillo</td>
               </tr>
+              <tr>
+                <td>Alumnos</td>
+                <td>B</td>
+                <td>Burro</td>
+                <td>Begonia</td>
+                <td>Banana</td>
+                <td>Beterraga</td>
+                <td>Bart</td>
+                <td>Bombero</td>
+                <td>Barranquilla</td>
+                <td>Bolivia</td>
+                <td>Boreal</td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -253,9 +266,10 @@
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
           <div class="box-team wow bounceInUp">
-            <img src="img/team/2.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Thomas Jeffersonn</h4>
-            <p>Web Designer</p>
+            <img src="https://scontent.flim3-2.fna.fbcdn.net/v/t31.0-8/p960x960/1614160_10206232284381469_5741240121222526506_o.jpg?_nc_cat=101&_nc_eui2=AeEOofmvz6Ckuik2Gi8YN-I2MR542NrxSBA_viVD-Lv5tEzUnbPypDu2v2EM0GIj7VRWIWzTpTFqherg4KgdBBJDf2bj3O8a81fkymjfS0qkow&_nc_ohc=XRq5aCJLucoAQlx5fyLcNqhHGjXR9XnBTeb7kzWNlNvWfSZsuCRjvy5mw&_nc_ht=scontent.flim3-2.fna&oh=8caf3f99eba615b1bc852cc273b209a3&oe=5E730F41" alt="" class="img-circle img-responsive" />
+            <h4>Javier Cardenas</h4>
+            <p>Miembro del equipo</p>
+            <p>Celular: +51 991467538</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
