--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <div class="section-heading">
             <h2>Nuestro Equipo</h2>
             <div class="heading-line"></div>
-            <p>Equipo de Docentes</p>
+            <p>Equipo de Alumnos</p>
           </div>
         </div>
       </div>
@@ -260,15 +260,14 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
             <img src="img/team/1.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Dominique Vroslav</h4>
-            <p>Art Director</p>
+            <h4>Marvin Cordova</h4>
+            <p>+51 935876141</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
           <div class="box-team wow bounceInUp">
             <img src="https://scontent.flim3-2.fna.fbcdn.net/v/t31.0-8/p960x960/1614160_10206232284381469_5741240121222526506_o.jpg?_nc_cat=101&_nc_eui2=AeEOofmvz6Ckuik2Gi8YN-I2MR542NrxSBA_viVD-Lv5tEzUnbPypDu2v2EM0GIj7VRWIWzTpTFqherg4KgdBBJDf2bj3O8a81fkymjfS0qkow&_nc_ohc=XRq5aCJLucoAQlx5fyLcNqhHGjXR9XnBTeb7kzWNlNvWfSZsuCRjvy5mw&_nc_ht=scontent.flim3-2.fna&oh=8caf3f99eba615b1bc852cc273b209a3&oe=5E730F41" alt="" class="img-circle img-responsive" />
             <h4>Javier Cardenas</h4>
-            <p>Miembro del equipo</p>
             <p>Celular: +51 991467538</p>
           </div>
         </div>
