--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <div class="section-heading">
             <h2>Nuestro Equipo</h2>
             <div class="heading-line"></div>
-            <p>Equipo de Alumnos</p>
+            <p>SNOW</p>
           </div>
         </div>
       </div>
@@ -274,14 +274,14 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
           <div class="box-team wow bounceInUp">
             <img src="img/team/3.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Erick</h4>
-            <p>Illustrator</p>
+            <h4>Erick Sajami</h4>
+            <p>+51 931 343 591</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
           <div class="box-team wow bounceInUp">
             <img src="img/team/4.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Roxana</h4>
+            <h4>Roxana Isadora</h4>
             <p>Typographer</p>
           </div>
         </div>
