--- a/index.html
+++ b/index.html
@@ -250,17 +250,17 @@
       <div class="row">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
-            <h2>Nuestro Equipo</h2>
+            <h2>EQUIPPO SNOW</h2>
             <div class="heading-line"></div>
-            <p>SNOW</p>
+            <p>El más chévere</p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
-            <img src="img/team/1.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Marvin Cordova</h4>
+            <img src="https://avatars1.githubusercontent.com/u/58452664?s=400&v=4" alt="" class="img-circle img-responsive" />
+            <h4>Roxana Isadora</h4>
             <p>+51 935876141</p>
           </div>
         </div>
@@ -273,16 +273,16 @@
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
           <div class="box-team wow bounceInUp">
-            <img src="img/team/3.jpg" alt="" class="img-circle img-responsive" />
+            <img src="https://avatars0.githubusercontent.com/u/58631033?s=460&v=4" alt="" class="img-circle img-responsive" />
             <h4>Erick Sajami</h4>
             <p>+51 931 343 591</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
           <div class="box-team wow bounceInUp">
-            <img src="img/team/4.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Roxana Isadora</h4>
-            <p>Typographer</p>
+            <img src="https://avatars0.githubusercontent.com/u/58607734?s=460&v=4" alt="" class="img-circle img-responsive" />
+            <h4>Marvin Cordova</h4>
+            <p>+51 935876141</p>
           </div>
         </div>
       </div>
