--- a/index.html
+++ b/index.html
@@ -183,6 +183,19 @@
                 <td>Alemania</td>
                 <td>Amarillo</td>
               </tr>
+              <tr>
+                <td>Grupo a</td>
+                <td>B</td>
+                <td>Burro</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Buenos Aires</td>
+                <td>Bolivia</td>
+                <td></td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -239,7 +252,7 @@
           <div class="section-heading">
             <h2>Nuestro Equipo</h2>
             <div class="heading-line"></div>
-            <p>Equipo de Docentes</p>
+            <p>Grupo 1</p>
           </div>
         </div>
       </div>
@@ -247,8 +260,8 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
             <img src="img/team/1.jpg" alt="" class="img-circle img-responsive" />
-            <h4>Dominique Vroslav</h4>
-            <p>Art Director</p>
+            <h4>David Lopez</h4>
+            <p>+51 916730940</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
