--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <div class="row">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
-            <h2>EQUIPPO SNOW</h2>
+            <h2>EQUIPO SNOW</h2>
             <div class="heading-line"></div>
             <p>El más chévere</p>
           </div>
