--- a/index.html
+++ b/index.html
@@ -196,6 +196,19 @@
                 <td>Bolivia</td>
                 <td>Boreal</td>
               </tr>
+              <tr>
+                <td>Snow</td>
+                <td>D</td>
+                <td>Delfin</td>
+                <td>Dalia</td>
+                <td>Durazno</td>
+                <td>Damasco</td>
+                <td>Dionisio</td>
+                <td>Dentista</td>
+                <td>Dallas</td>
+                <td>Dinamarca</td>
+                <td>Dalila</td>
+              </tr>
             </tbody>
           </table>
         </div>
