--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>Docentes</td>
+                <td>Snow</td>
                 <td>A</td>
                 <td>Abeja</td>
                 <td>Amapola</td>
@@ -184,7 +184,7 @@
                 <td>Amarillo</td>
               </tr>
               <tr>
-                <td>Alumnos</td>
+                <td>Snow</td>
                 <td>B</td>
                 <td>Burro</td>
                 <td>Begonia</td>
@@ -195,6 +195,19 @@
                 <td>Barranquilla</td>
                 <td>Bolivia</td>
                 <td>Boreal</td>
+              </tr
+			  <tr>
+                <td>Snow</td>
+                <td>C</td>
+                <td>Caballo</td>
+                <td>Cataleya</td>
+                <td>Coco</td>
+                <td>Cebolla</td>
+                <td>Carlos</td>
+                <td>Cantante</td>
+                <td>Callao</td>
+                <td>Canada</td>
+                <td>Celeste</td>
               </tr>
             </tbody>
           </table>
