--- a/index.html
+++ b/index.html
@@ -222,6 +222,19 @@
                 <td>Dinamarca</td>
                 <td>Dalila</td>
               </tr> 
+              <tr>
+                <td>Erick Sajami</td>
+                <td>O</td>
+                <td>Ornitorinco</td>
+                <td>Ortencio</td>
+                <td>Orégano</td>
+                <td>Oliva</td>
+                <td>Ortencio</td>
+                <td>Oncologo</td>
+                <td>Ohio</td>
+                <td>Omán</td>
+                <td>Ocre</td>
+              </tr> 
               </tr>
             </tbody>
           </table>
