--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                 <td>Barranquilla</td>
                 <td>Bolivia</td>
                 <td>Boreal</td>
-              </tr
-			         <td>
+              </tr>
+			        <tr>
                 <td>Snow</td>
                 <td>C</td>
                 <td>Caballo</td>
@@ -222,7 +222,19 @@
                 <td>Dinamarca</td>
                 <td>Dalila</td>
               </tr> 
-              </tr>
+              <tr>
+                <td>Javier</td>
+                <td>O</td>
+                <td>Oveja</td>
+                <td>Dalia</td>
+                <td>Oliva</td>
+                <td>Oca</td>
+                <td>Omar</td>
+                <td>Odontólogo</td>
+                <td>Dallas</td>
+                <td>Omán</td>
+                <td>Ocre</td>
+              </tr> 
             </tbody>
           </table>
         </div>
