--- a/index.html
+++ b/index.html
@@ -260,6 +260,19 @@
                 <td>Orleans</td>
                 <td>Orcela</td>
               </tr>
+              <tr>
+                <td>Marvin Cordova</td>
+                <td>O</td>
+                <td>Oso</td>
+                <td>Orquidea</td>
+                <td>Olivo</td>
+                <td>Oca</td>
+                <td>Oscar</td>
+                <td>Oficinista</td>
+                <td>Otan</td>
+                <td>Oman</td>
+                <td>Oscuro</td>
+              </tr>
             </tbody>
           </table>
         </div>
