--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <td>Orcela</td>
               </tr>
               <tr>
-                <td>Marvin Cordova</td>
+                <td>Marvin Córdova</td>
                 <td>O</td>
                 <td>Oso</td>
                 <td>Orquidea</td>
